--- a/style.css
+++ b/style.css
@@ -4,49 +4,66 @@
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-html{
+body{
     background: #4c2494;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
 }
-.titulo{
-    color: white;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 13px;
-    padding: 10px;
-    font-size: 13px;
-
-}
-.div-main{
+main{
     background: #ecf4f4;
-    width: 70vw;
-    height: 75vh;
-    margin: auto;
+    width: 85vw;
     padding: 40px;
     box-shadow: 5px 5px 25px black;
 }
-.div-main2{
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
-.div-main > nav > a > img{
+nav img{
     width: 20px;
     height: 20px;
     margin-right: 45px;
     padding-top: 5px;
 }
-.div-main > nav{
+nav{
     display: flex;
-    align-items: center;
-    margin-left: 50px;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 0 50px;
+    width: 100%;
 }
-.div-main > nav > a{
-    padding: 0 20px;
+nav a:hover, .social:hover{
+    transform: scale(1.1);
+}
+nav a{
+    padding: 20px 90px;
     color: black;
     text-decoration: none;
+    font-size: 20px;
+    width: 130px;
+    height: 30px;
+    color: #4c2494;
+    font-weight: bold;
+    letter-spacing: 1px;
+    border: 2px solid #4c2494;
+    border-radius: 20px;
+    margin-right: 25px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.div-main > nav > a:hover, .social:hover{
-    transform: scale(1.1);
+nav a:hover{
+    background: #4c2494;
+    color: white;
+}
+
+
+
+
+/*------------------- Tela Principal --------------------------*/
+.div-main2{
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 .div-left, .div-right{
     width: 50%;
@@ -54,33 +71,40 @@ html{
     display: flex;
     flex-direction: column;
 }
-.h1{
-    font-size: 38px;
+.titulo{
+    font-size: 80px;
     margin-top: 50PX;  
-    padding: 0; 
     line-height: 65px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column
 }
 .h1-1{
-    width: 50%;
+    margin-bottom: 30px;
+}
+.h1-1 span{
     color: white;
     background: #4c2494;
-    padding: 5px;
+    padding: 0 10px;
 }
-.h1-2{
+.h1-2 span{
     color: white;
     background: #fcb404;
-    padding: 5px;
+    padding: 0 10px;
 }
-.div-left > p{
-    width: 85%;
+.div-left p{
     font-size: 13px;
     margin: 30px 0;
+    line-height: 22px;
+}
+.div-left p strong{
+    letter-spacing: 1px;
 }
 .button{
     display: flex;
     align-items: center;
 }
-.button > button{
+.button button{
     font-size: 15px;
     width: 170px;
     height: 35px;
@@ -92,37 +116,157 @@ html{
     margin-right: 40px;
     cursor: pointer;
 }
-.button > button:hover{
+.button button:hover{
     background: #4c2494;
     color: white;
     transform: scale(1.1);
 }
-.button > h5{
+.button h5{
     font-style: italic;
     font-size: 15px;
 }
+
+
+/* ---------------------- Footer ----------------------- */
 footer{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: flex-end;
+}
+footer div{
     display: flex;
     align-items: center;
-    position: relative;
-    top: 100px;
 }
-footer > h6{
+footer h6{
     font-weight: bold;
     font-size: 15px;
-    margin-right: 50px;
-}
-.buy{
-    width: 15px;
-    margin-right: 5px;
+    margin-right: 20px;
 }
 .social{
     width: 28px;
     margin: 0 7px;
 }
-.div-right > img{
+.div-right img{
     width: 65%;
     height: 90%;
     margin: 20px 120px;
     border-radius: 10px;
 }
+
+
+
+/*---------------------------------------------------------------------*/
+                /* Home */
+
+.home{
+    width: 85vw;
+    padding: 40px 0;
+    box-shadow: 5px 5px 25px black;
+} 
+.logo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}           
+.main-home{
+    background: #1cc4b4;
+    margin-top: 20px;
+    height: 65vh;
+    display: flex;
+}
+.left-home, .right-home{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.left-home h1{
+    color: #4c2494;
+}
+.titulo-home button{
+    margin-top: 60px;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 20px;
+    border: 1px solid black;
+    background: #fcb404;
+}
+.titulo-home button:hover{
+    transform: scale(1.1);
+}
+.right-home img{
+    width: 500px;
+}
+
+/*----------------------- section ---------------------------*/
+.section{
+    padding: 40px;
+    display: flex;
+}
+.descrition{
+    width: 55%;
+    margin: 60px 60px 10px 0;
+}
+.descrition h1{
+    font-family: 'Courier New', Courier, monospace;
+    margin-bottom: 10px;
+}
+.descrition p{
+    line-height: 27px;
+}
+/*----- Formulário ----*/
+form{
+    width: 40%;
+    background: #ecf4fc;
+    padding: 10px;
+    border: 1px solid gray;
+    display: flex;
+    flex-direction: column;
+}
+form h1{
+    font-size: 23px;
+    text-align: center;
+    margin: 20px 0 50px 0;
+    line-height: 30px;
+}
+form input{
+    margin-bottom:30px;
+    padding:10px;
+    border: none;
+    border-bottom: 2px solid black;
+    background: #ecf4fc;
+    outline: none;
+    font-size: 18px;
+}
+.input-radio input{
+    transform: scale(1.1);
+
+}
+.input-radio span{
+    font-size: 10px;
+}
+form button{
+    padding: 8px;
+    font-size: 15px;
+    border-radius: 20px;
+    border: 3px solid #4c2494;
+    background: #ecf4fc;
+    color: #4c2494;
+    font-weight: bold;
+}
+form button:hover{
+    background: #4c2494;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
