--- a/style.css
+++ b/style.css
@@ -18,10 +18,8 @@ main{
     box-shadow: 5px 5px 25px black;
 }
 nav img{
-    width: 20px;
-    height: 20px;
-    margin-right: 45px;
-    padding-top: 5px;
+    width: 50px;
+    height: 50px;
 }
 nav{
     display: flex;
@@ -169,7 +167,11 @@ footer h6{
     display: flex;
     justify-content: center;
     align-items: center;
-}           
+}      
+.logo img{
+    width: 50px;
+    height: 50px;
+}     
 .main-home{
     background: #1cc4b4;
     margin-top: 20px;
